test/static/wrong/shadow4.kk.out
test/static/wrong/shadow4.kk(2,18): warning: x shadows an earlier local definition or parameter
test/static/wrong/shadow4.kk(2,29): error: types do not match
 context : x + True
 term : True
 inferred type: bool
 expected type: int